# SaberPro-AI-Assistant

./: .gitignore  README.md  benchmark.py  benchmark_results.csv  db_init.py  main_rag.py  pyproject.toml  requirements.txt  saber_pro_data.txt  test_data.json
.github/workflows/: main_saber-pro-chat.yml
Data/: Banco-Preguntas-Icfes.txt
EDA/: EDA.ipynb  model.ipynb  preguntas_por_categoria.txt
chroma_db_saberpro/: chroma.sqlite3
static/: index.html
static/css/: app.css
static/js/: app.js
